# pytest-r-snapshot

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: docs.yml
articles/configuration/: index.html
articles/design/: index.html
articles/migration/: index.html
articles/setup/: index.html
articles/troubleshooting/: index.html
articles/usage/: index.html
changelog/: index.html
docs/: changelog.md  index.md
docs/articles/: configuration.md  design.md  migration.md  setup.md  troubleshooting.md  usage.md
docs/reference/: chunks.md  errors.md  normalize.md  plugin.md  runner.md  settings.md  snapshot.md  top-level-api.md
reference/chunks/: index.html
reference/errors/: index.html
reference/normalize/: index.html
reference/plugin/: index.html
reference/runner/: index.html
reference/settings/: index.html
reference/snapshot/: index.html
reference/top-level-api/: index.html
scripts/: sync.sh
search/: search_index.json
src/pytest_r_snapshot/: __init__.py  chunks.py  errors.py  normalize.py  plugin.py  runner.py  settings.py  snapshot.py
tests/: test_chunks.py  test_help.py  test_runner.py  test_snapshot_io.py  test_snapshot_name.py
