[project]
name = "pytest-r-snapshot"
version = "0.1.0"
description = "A pytest plugin for snapshot testing against R code outputs"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = ["pytest>=7.0.0"]

[project.entry-points.pytest11]
r-snapshot = "pytest_r_snapshot.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=2.0.1",
    "mypy>=1.19.0",
    "ruff>=0.14.9",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
